--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Accio Jobs!</h1>
+	<a href="https://acciojob.com/blog/">Blog</a>
+	<br>
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<br>
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+	<br>
+	<p>We can say that optimization is...</p>
+
+
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<br>
+	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
+	<p>DSA or Competitive programming?...</p>
+	<br>
+	
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<br>
+	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">Complete Guide on FlexBox</a>
+	<p>As a job seeker, you may wonder...</p>
+	<br>
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
