--- a/main.html
+++ b/main.html
@@ -13,20 +13,20 @@
 	</Marquee>
 	<a href="https://acciojob.com/blog/">Blog</a>
 	<br>
-	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY=" alt="unsplash"/>
 	<br>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
 	<br>
 	<p>We can say that optimization is...</p>
 
 
-	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY=" alt="unsplash2"/>
 	<br>
 	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
 	<p>DSA or Competitive programming?...</p>
 	<br>
 	
-	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY="/>
+	<img width="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY=" alt="unsplash3"/>
 	<br>
 	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">Complete Guide on FlexBox</a>
 	<p>As a job seeker, you may wonder...</p>
