--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
 	<img width="200px" height="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY=" alt="unsplash2"/>
 	<br>
-	<a href="https://acciojob.com/blog/untitled-19/">DSA vs. Competitive Programming</a>
+	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
 	<p>DSA or Competitive programming?...</p>
 	<br>
 	
