--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<Marquee>
 	<h1>Welcome to Accio Jobs!</h1>
 	</Marquee>
-	<a href="https://acciojob.com/blog/">Blog</a>
+	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 	<br>
 	<img width="200px" height="200px" src="https://media.istockphoto.com/id/1709243840/photo/beach.jpg?s=2048x2048&w=is&k=20&c=_oNICIDq_KwxQF6TRc9agQwa9bVywynWIMvSZdgmzbY=" alt="unsplash"/>
 	<br>
